src/query/snapshots/ecsdb__query__ir__test__filter_expression_where_clause@WithoutComponent("ecsdb::Test").where_clause().snap
---
source: src/query/ir.rs
description: "WithoutComponent(\"ecsdb::Test\").where_clause()"
---
SqlFragment<ecsdb::query::ir::Where> {
    sql: "(select true from components c2 where c2.entity = components.entity and c2.component = ?1) is null",
    placeholders: [
        (
            "?1",
            Text(
                "ecsdb::Test",
            ),
        ),
    ],
}
