src/query/snapshots/ecsdb__query__ir__test__simplify@And([And([EntityId(42), WithComponent("ecsdb::Test")]), And([EntityId(23), WithComponent("ecsdb::Foo"), WithoutComponent("ecsdb::Bar")])]).simplify().snap
---
source: src/query/ir.rs
description: "And([And([EntityId(42), WithComponent(\"ecsdb::Test\")]), And([EntityId(23), WithComponent(\"ecsdb::Foo\"), WithoutComponent(\"ecsdb::Bar\")])]).simplify()"
---
And(
    [
        EntityId(
            42,
        ),
        WithComponent(
            "ecsdb::Test",
        ),
        EntityId(
            23,
        ),
        WithComponent(
            "ecsdb::Foo",
        ),
        WithoutComponent(
            "ecsdb::Bar",
        ),
    ],
)
