src/query/snapshots/ecsdb__query__ir__test__simplify@Or([And([EntityId(42), WithComponent("ecsdb::Test")]), And([EntityId(23), WithComponent("ecsdb::Foo"), WithoutComponent("ecsdb::Bar")])]).simplify().snap
---
source: src/query/ir.rs
description: "Or([And([EntityId(42), WithComponent(\"ecsdb::Test\")]), And([EntityId(23), WithComponent(\"ecsdb::Foo\"), WithoutComponent(\"ecsdb::Bar\")])]).simplify()"
---
Or(
    [
        And(
            [
                EntityId(
                    42,
                ),
                WithComponent(
                    "ecsdb::Test",
                ),
            ],
        ),
        And(
            [
                EntityId(
                    23,
                ),
                WithComponent(
                    "ecsdb::Foo",
                ),
                WithoutComponent(
                    "ecsdb::Bar",
                ),
            ],
        ),
    ],
)
