src/query/snapshots/ecsdb__query__ir__test__simplify@Or([WithComponent("ecsdb::Foo"), WithoutComponent("ecsdb::Bar")]).simplify().snap
---
source: src/query/ir.rs
description: "Or([WithComponent(\"ecsdb::Foo\"), WithoutComponent(\"ecsdb::Bar\")]).simplify()"
---
Or(
    [
        WithComponent(
            "ecsdb::Foo",
        ),
        WithoutComponent(
            "ecsdb::Bar",
        ),
    ],
)
