src/query/snapshots/ecsdb__query__ir__test__simplify@WithComponent("ecsdb::Test").simplify().snap
---
source: src/query/ir.rs
description: "WithComponent(\"ecsdb::Test\").simplify()"
---
WithComponent(
    "ecsdb::Test",
)
